Send contact email when local server status changed #3 - Add migration to edit database. - Add contact to the server schema - Add status changed feed in the channels manager. - Implement notification email HTML.
