# swagger.yaml
@@ -512,6 +512,10 @@ definitions:
             displayName:
                 type: string
                 description: 'Display name'
+            contactMail:
+                type: string
+                description: 'Contact mail, allow null case there is no contact defined'
+                x-nullable: true
             validUsers:
                 type: array
                 items:
@@ -535,6 +539,10 @@ definitions:
             displayName:
                 type: string
                 description: 'Display name'
+            contactMail:
+                type: string
+                description: 'Contact mail, allow null case there is no contact defined'
+                x-nullable: true
             validUsers:
                 type: array
                 items:
